--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link href="%PUBLIC_URL%/assets/css/core.min.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/assets/css/thesaas.min.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
